--- a/assets/css/_modules/_footer.scss
+++ b/assets/css/_modules/_footer.scss
@@ -1,4 +1,4 @@
-.footer-2 {
+.footer {
 	$base-spacing: 1.5em !default;
 	$base-accent-color: #477DCA !default;
 	$medium-screen: em(640) !default;
@@ -27,6 +27,12 @@
 	padding: $base-spacing;
 	width: 100%;
 	display: inline-block;
+
+	color: $footer-link-color;
+
+	.footer-love-letters {
+		@include vertical-horizontal-centering();
+	}
 
 	.footer-logo {
 		margin-right: 1em;
