--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -870,72 +870,91 @@ input[type="submit"] {
       height: 100%;
       width: 100%; }
 
-.footer-2 {
+.footer {
   background: #40526b;
   padding: 1.5em;
   width: 100%;
-  display: inline-block; }
-  .footer-2 ul {
+  display: inline-block;
+  color: rgba(255, 255, 255, 0.4); }
+  .footer ul {
     margin: 0;
     padding: 0;
     line-height: 1.5em; }
-  .footer-2 li {
+  .footer li {
     list-style: none; }
-  .footer-2 a {
+  .footer a {
     text-decoration: none; }
-  .footer-2 .footer-logo {
+  .footer .footer-love-letters {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-box-align: center;
+    box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center; }
+  .footer .footer-logo {
     margin-right: 1em;
     margin-bottom: 1em; }
     @media screen and (min-width: 53.75em) {
-      .footer-2 .footer-logo {
+      .footer .footer-logo {
         float: left;
         margin-bottom: 0; } }
-  .footer-2 .footer-logo img {
+  .footer .footer-logo img {
     height: 2.6em; }
-  .footer-2 ul {
+  .footer ul {
     margin-bottom: 1em; }
     @media screen and (min-width: 53.75em) {
-      .footer-2 ul {
+      .footer ul {
         float: left;
         line-height: 1.8em;
         margin-left: 1em;
         margin-bottom: 0;
         padding-top: 0.5em; } }
-  .footer-2 ul li {
+  .footer ul li {
     font-weight: 800;
     padding-right: 1em; }
     @media screen and (min-width: 53.75em) {
-      .footer-2 ul li {
+      .footer ul li {
         display: inline;
         text-align: left; } }
-  .footer-2 ul li a {
+  .footer ul li a {
     color: rgba(255, 255, 255, 0.4); }
-    .footer-2 ul li a:hover {
+    .footer ul li a:hover {
       color: white; }
   @media screen and (min-width: 53.75em) {
-    .footer-2 .footer-secondary-links {
+    .footer .footer-secondary-links {
       float: right; } }
-  .footer-2 .footer-secondary-links li {
+  .footer .footer-secondary-links li {
     font-size: 0.8em;
     font-weight: 400; }
-  .footer-2 .footer-secondary-links ul.footer-social {
+  .footer .footer-secondary-links ul.footer-social {
     margin-top: 1em; }
     @media screen and (min-width: 53.75em) {
-      .footer-2 .footer-secondary-links ul.footer-social {
+      .footer .footer-secondary-links ul.footer-social {
         float: right;
         margin-top: 0; } }
-    .footer-2 .footer-secondary-links ul.footer-social li {
+    .footer .footer-secondary-links ul.footer-social li {
       font-size: 1em;
       float: left;
       line-height: 0;
       padding-right: 0.7em; }
-      .footer-2 .footer-secondary-links ul.footer-social li:last-child {
+      .footer .footer-secondary-links ul.footer-social li:last-child {
         padding-right: 0; }
-    .footer-2 .footer-secondary-links ul.footer-social img {
+    .footer .footer-secondary-links ul.footer-social img {
       height: 1.6em;
       opacity: 0.7;
       padding: 1px; }
-      .footer-2 .footer-secondary-links ul.footer-social img:hover {
+      .footer .footer-secondary-links ul.footer-social img:hover {
         opacity: 1; }
 
 /*# sourceMappingURL=main.css.map */
